syntax = "proto3";
option csharp_namespace = "CrewService.Presentation";
import "google/api/annotations.proto";
import "Protos/common.proto";
package contacttypes;

service AddressTypeSrvc {
  rpc GetAllAsync(GetAllAddressTypeRequest) returns (GetAllAddressTypeResponse) {
    option (google.api.http) = { get: "/v1/address-types" };
  }
  rpc GetAsync(GetAddressTypeRequest) returns (AddressTypeResponse) {
    option (google.api.http) = { get: "/v1/address-types/{ctrl_nbr}" };
  }
  rpc CreateAsync(CreateAddressTypeRequest) returns (AddressTypeResponse) {
    option (google.api.http) = { post: "/v1/address-types" body: "*" };
  }
  rpc UpdateAsync(UpdateAddressTypeRequest) returns (AddressTypeResponse) {
    option (google.api.http) = { put: "/v1/address-types/{ctrl_nbr}" body: "*" };
  }
  rpc DeleteAsync(DeleteAddressTypeRequest) returns (common.DeleteResponse) {
    option (google.api.http) = { delete: "/v1/address-types/{ctrl_nbr}" };
  }
}

message GetAllAddressTypeRequest {
  int64 client_ctrl_nbr = 1;
  int32 page_number = 2;
  int32 page_size = 3;
}

message GetAllAddressTypeResponse {
  repeated AddressTypeResponse addressTypeList = 1;
  int32 total_count = 2;
}

message GetAddressTypeRequest {
  int64 ctrl_nbr = 1;
}

message CreateAddressTypeRequest {
  int64 client_ctrl_nbr = 1;
  string name = 2;
  int32 number = 3;
  bool emergency_type = 4;
}

message UpdateAddressTypeRequest {
  int64 ctrl_nbr = 1;
  string name = 2;
  int32 number = 3;
  bool emergency_type = 4;
}

message DeleteAddressTypeRequest {
  int64 ctrl_nbr = 1;
}

message AddressTypeResponse {
  int64 ctrl_nbr = 1;
  int64 client_ctrl_nbr = 2;
  string name = 3;
  int32 number = 4;
  bool emergency_type = 5;
  bool success = 6;
  repeated string messages = 7;
}